...

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">
        <LinearLayout
            android:id="@+id/darkmode_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
...
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_theme_menu"
                android:layout_weight="1"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtich_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
