<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/menu2"
            android:icon="@drawable/baseline_favorite_24"
            android:iconTint="?attr/colorOnPrimary"
            android:title="@string/favorite_item"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu1"
            android:icon="@drawable/baseline_settings_24"
            android:iconTint="?attr/colorOnPrimary"
            android:title="@string/setting_item"
            app:showAsAction="ifRoom"/>

    </group>

</menu>